css/main.css
/* ... */
@media (min-width: 992px) {
    .page-header {
        height: 22rem;
    }
    .page-header h4 {
        padding-top: 9rem;
    }
}

@media (min-width: 900px) {
    .service-text {
        margin-top: 2em;
        width: 40%;
        float: left;
    }
    .service-img {
        margin-left: 3em;
        width: 50%;
        float: right;
    }
    .service-text-2 {
        margin-top: 2em;
        width: 40%;
        text-align: left;
        float: right;
    }
    .service-img-2 {
        width: 50%;
        float: left;
    }
    .service-img-2 img {
        text-align: left;
    }
}
/*
Header and nav
*/
ul {
    margin: 0;
    padding: 0;
    list-style: none;
}
#home nav a {
    color: #fff;
}
nav {
    z-index: 99999;
    position: fixed;
    height: 70px;
    width: 100%;
    border-bottom: 1px solid rgba(230,230,230, .3);
    background-color: #fff;
}
#home nav {
    border-bottom: 1px solid rgba(255, 255, 255, .1);
    background-color: transparent;
}
.nav {
    background-color: transparent;
    border: none;
}
nav ul {
    line-height: 70px;
    text-align: right;
}
nav ul li {
    display: inline-block;
    margin-right: 14px;
}
nav ul li a {
    font-size: 16px;
    font-weight: normal;
    color: #2c3e50;
    vertical-align: middle;
    text-decoration: none;
    display: inline-block;
    transition: all 300ms linear 0s;
}
nav ul li a:hover {
    color: #2c3e50;
    transition: all 500ms ease-in-out;
}
nav ul li:last-of-type {
    margin-right: 0;
}
.transparent-nav {
    background-color: transparent;
}
.underline {
    position: relative;
}
#home .underline:after {
    background-color: #fff;
}
.underline:after {
    content: '';
    position: absolute;
    left: 0; bottom: -4px;
    height: 1.5px;
    background-color: #222;
    /*width: 0;*/
    width: 100%;
    transition: width .4s;
}
.fade {
    color: #acacac;
}
#home .fade {
    opacity: .5;
}
#home .fade:hover {
    opacity: 1;
}
.links {
    visibility: hidden;
}

.site-title {
    width: 100%;
    position: absolute;
    cursor: pointer;
    top: 26.5px;
}
.logo-svg {
    /*max-width: 100%;*/
    height: 14px;
    margin: 0 10px 0 0;
    overflow: visible !important;
    white-space: normal !important;
}
.menu li:hover .sub-menu {
    z-index:1;
    opacity:1;
}

.sub-menu {
    display: none;
    width:15em;
    padding:5px 0px;
    position:absolute;
    top:75%;
    z-index:-1;
    opacity:0;
    transition:opacity linear 300ms;
    box-shadow:0px 2px 3px rgba(0,0,0,0.2);
    background:#f1f2f3;
}
#home .sub-menu li a {
    color: #2c3e50;
}
.sub-menu li {
    display:block;
    font-size:16px;
    text-align: left;
    margin: 0;
}
.menu li:hover .sub-menu {
    display: block;
}
.sub-menu li a {
    padding:.75em 1.5em;
    display:block;
}

.sub-menu li a:hover, .sub-menu .current-item a {
    background:#ddd;
}

#home .logo-svg {
    /*max-width: 100%;*/
    height: 10px;
}

.hamburger {
    position: absolute;
    z-index: 9999999;
    top: 27px;
    right: 15px;
    bottom: 0;
    width: 30px;
    height: 30px;
    cursor: pointer;
}
#home .nav {
    border: none;
}
.hamburger a {
    display: block;
}
.hamburger a span {
    background-color: #222;
}
.hamburger .btn-close a span {
    background-color: #222;
}
#home .hamburger a span {
    background-color: #fff;
}
.hamburger a span {
    transition: all 400ms linear 0s;
    display: block;
    height: 2px;
    width: 28px;
    margin-bottom: 4px;
}
.btn-open {
    display: block;
    width: 30px;
    height: 30px;
}
@media (min-width: 768px) {
    .site-title{
        top: 26px;
    }
    .hamburger {
        top: 30px;
    }
    .logo-svg, #home .logo-svg {
        height: 20px;
        width: auto;
    }
    nav {
        height: 80px;
    }
    nav ul li {
        line-height: 80px;
    }
}
@media (min-width:769px) {
    .btn-menu {
        display: none;
    }
    .site-title {
        top: 30px;
    }
}
#meat {
    width: 18px;
    margin-left: 10px;
}
.btn-close {
    padding-top: 5px;
    margin-top: -5px;
    display: block;
    width: 30px;
    height: 30px;
}
.btn-close #top-bun {
    transform: rotate(45deg);
    background-color: #fff;
    margin: 0;
    margin-top: 5px;
}
.btn-close #meat {
    height: 0;
    display: none;
}
.btn-close #bottom-bun {
    margin: 0;
    background-color: #fff;
    margin-top: -2px;
    transform: rotate(-45deg);
}
#home .btn-close #top-bun{
    background-color: #fff;
}
#home .btn-close #bottom-bun {
    background-color: #fff;
}
.nav-overlay {
    z-index: 9999;
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: #3498db;
    overflow: auto;
}
.wrap {
    text-align: center;
    height: 90%;
    width: 100%;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
}
.wrap ul {
    margin-top: 10%;
}
.wrap ul.wrap-nav li {
    margin: 0;
    display: block;
    width: 100%;
}
.wrap ul.wrap-nav li a {
    font-weight: normal;
    font-size: 36px;
    color: #fff;
    letter-spacing: normal;
    display: block;
    line-height: 2;
    text-align: center;
    text-decoration: none;
    transition: all 500ms linear;
}
.wrap ul.wrap-nav li a {
    text-align: center;
}
.wrap ul.wrap-nav li a:hover {
    transition: all 500ms ease-in-out;
    color: #e6e6e6;
}
.wrap ul.wrap-nav ul li {
    display: block;
}

.link1 {
    animation-name: fadeDown;
    animation-duration: 300ms;
    animation-iteration-count: 1;
    animation-timing-function: ease-in-out;
}
.link2 {
    animation-name: fadeDown;
    animation-duration: 400ms;
    animation-iteration-count: 1;
    animation-timing-function: ease-in-out;
}
.link3 {
    animation-name: fadeDown;
    animation-duration: 500ms;
    animation-iteration-count: 1;
    animation-timing-function: ease-in-out;
}
.link4 {
    animation-name: fadeDown;
    animation-duration: 600ms;
    animation-iteration-count: 1;
    animation-timing-function: ease-in-out;
}
/* ... */

